--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Would you like to go on a Date with me Maria? 😊</h1>
+    <h1>Would you like to go on a Date with me? 😊</h1>
     <div class="buttons">
       <button id="yes1">Wohoooo Yes of Course</button>
       <button id="yes2">Yesss</button>
